# TeamAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  teamagent_architecture_v2.0.html  teamagent_architecture_v2.1.html  teamagent_implementation_plan_v2.0.html  teamagent_implementation_plan_v2.1.html  teamagent_overview_v2.1.html  teamagent_requirements_v2.0.html  teamagent_requirements_v2.1.html
docs/: README.md
docs/archive/v1.5/: teamagent_overview_v1.5.html
docs/archive/v2.0/: teamagent_overview_v2.0.html
docs/archive/v2.1/: teamagent_summary_v2.1.html
docs/archive/v3.0_superseded/: teamagent_implementation_plan_v3.0.html  teamagent_mva_spec_v1.html  teamagent_overview_v3.0.html
docs/v3.0/: teamagent_architecture_v3.0.html  teamagent_claudecode_seminar_v1.html  teamagent_dept_effect_summary_v1.html  teamagent_kinou4_spec_v1.html  teamagent_personal_ai_coach_requirements_v3.0.html  teamagent_phase0E_spec_v1.html  teamagent_requirements_v3.0.html  teamagent_懸念2_データ収集実現性_深掘りリサーチ_v1.html  teamagent_懸念2_複合リサーチ_IGスクレイピング調査_v2.html  teamagent_監査役懸念精査レポート_v1.html
docs/v3.1/: teamagent_implementation_plan_v3.1.html  teamagent_mva_spec_v1.1.html  teamagent_overview_v3.1.html  teamagent_search_skill_design_v1.md  teamagent_subsidiary_questions_v2.md
infra/docker/: docker-compose.yml  init-pgvector.sql
infra/terraform/: README.md  lambda_iam.tf  main.tf  outputs.tf  rds.tf  terraform.tfvars.example  variables.tf
scripts/: demo_pdf_vectorize.py  demo_pgvector_search.py  setup_local.sh
src/: README.md
src/skills/: README.md
